<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MesajActivity">

    <MultiAutoCompleteTextView
        android:id="@+id/et_mesaj"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:hint="Mesajınızı giriniz..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baslik"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/baslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autoText="false"
        android:text="Mesajlar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="157dp"
        android:layout_height="145dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mesaj"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rb_akrabaMesaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_akraba" />

        <RadioButton
            android:id="@+id/rb_arkadasMesaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_arkadas" />

        <RadioButton
            android:id="@+id/rb_isMesaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_is" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_gonder"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btn_gonder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/et_mesaj"
        app:layout_constraintTop_toTopOf="@+id/et_mesaj" />

</androidx.constraintlayout.widget.ConstraintLayout>